--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-midnight
 title: [Isaac Zacher]
-description: [Breif samples of My Data Science codes ]
+description: [Breif Samples of My Data Science Skills ]
